bad/sub_invalid_types_null_array.example_compiler_output
ERROR
[1mbad/sub_invalid_types_null_array.lat:3:7: [1;31merror: [0;1msubtraction is defined only for int values, not `null` and `string[]`[m
	null - new string[3];
	     [1;32m^[m
